styles.css
/*Clearfix*/
.group:after {
  content: "";
  display: table;
  clear: both;
}

html, body {
  padding: 0;
}

html {
  /*overflow-y: scroll;*/
  margin: 0;
  height: 100%;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  font-family: 'Roboto', sans-serif;
  font-size: 13px;
}

*,
*:before,
*:after {
  -webkit-box-sizing: inherit;
  box-sizing: inherit;
  margin: 0 auto;
}

body {
  position: relative;
  margin: auto;
  min-height: 100%;
  margin-top: 0;
  background-color: rgba(0,0,0,0.02);
  padding: 0;
}

header {
  margin: 0 auto;
  display: block;
  border-bottom: 2px solid #99baef;
  width: 100%;
  background-color: #ffffff;
  padding-top: 0;
}

/*  Footer */
footer {
  font-size: 15px;
  background-color: #eeeeee;
  position: absolute;
  right: 0;
  left: 0;
  bottom: 0;
  width: 100%;
}
div.footer-flex-container {
  padding: 0 10px 0 10px;
  width: 800px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

footer p {
  width: 75%;
  padding: 10px 0 0 0;
  -ms-flex-shrink: 2;
  flex-shrink: 2;
}

footer a {
  -ms-flex-shrink: 1;
  flex-shrink: 1;
  padding: 10px 0;
}

footer div.spacer {
  margin: 0 3px 0 3px;
  padding: 10px 0;
}

.footer-parent {
  padding-top: 38px;
}
/* end Footer */

label {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.tagline {
  color: #4a5154;
  margin-bottom: 10px;
}

.introduction {
  margin-bottom: 20px;
}

.mainContent {
  margin: 15px auto;
  display:block;
  background-color: #ffffff;
  width: 800px;
  border: 1px solid rgba(0,0,0,0.08);
}

.mainHeaderText {
  color: #4a5154;
  padding-left: 20px;
  padding-top: 15px;
  padding-bottom: 15px;
  margin: 0 auto;
  text-align: left;
  width: 800px;
}

.hidden {
  display: none;
}

.inline {
  display: inline-block;
}

.introduction {
  margin: 20px 40px 20px 40px;
}

input[type=number], select {
  height: 19px;
  border: 1px solid #b2b2b2;
  padding-left: 2px;
}

input[type=checkbox], label:not(.radiobox-label) {
  cursor: pointer;
}

.currency {
  padding: 0 2px 0 2px;
}

.percentage {
  padding-left: 2px;
}

/* Basic Inputs section*/
.inputs-section {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  margin: 0px 40px 0px 40px;
}

.basic-input {
  display: -webkit-inline-box;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 14px;
}

div.basic-input > * {
  display: inline-block;
}

.basic-input > *:not(input) {
  margin-top: 1px;
  margin-bottom: 1px;
}

#inputIncome {
  max-width: 100px;
}

#scottishTax {
  margin: 3px;
  height: 13px;
  width: 13px;
}
/* end Basic Inputs section*/



/* More Options (advanced) section */
.advanced-section {
  margin-top: 20px;
  width: 720px;
  -webkit-box-shadow: 2px 2px 5px #dddddd;
  box-shadow: 2px 2px 5px #dddddd;
}

.advanced-header {
  width: 100%;
  padding: 10px;
  background-color: #eeeeee;
  border: 1px solid #b2b2b2;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.advanced-header:hover {
  background-color: #dedede;
}

.advanced-header:focus {
  background-color: #dedede;
  outline: none;
  
}

.advanced-header::after {
  content: "\002B";
  font-size: 14px;
  float: right;
}

.advanced-header.active::after {
  content: "\2212";
}

.advanced-content {
  height: 0;
  width: 100%;
  -webkit-transition: height 0.2s ease-out;
  -moz-transition: height 0.2s ease-out;
  -o-transition: height 0.2s ease-out;
  -ms-transition: height 0.2s ease-out;
  transition: height 0.2s ease-out;
}

.advanced-header.active + .advanced-content {
  margin-top: 0;
  padding: 10px 20px 0px 20px;
  border: 1px solid #b2b2b2;
  border-top: none;
  height: 77px;
}

.advanced-content .advanced-input {
  display: none;
  padding-bottom: 10px;
}

.advanced-header.active + .advanced-content .advanced-input {
  display: table-cell;
}

.advanced-content table, .advanced-content tbody {
  width: 100%;
}

.advanced-content td {
  width: 50%;
}

.advanced-content input[type=checkbox] {
  float:right;
  margin: 1px auto 1px 5px;
  height: 13px;
  width: 13px;
}

.advanced-input input[type=number], .advanced-input select {
  margin-left: 0px;
  height: 19px;
  line-height: 19px;
}

.advanced-input * {
  display: inline-block;
}

#studentLoan {
  max-width: 150px;
}

#pension-input {
  display: inline-block;
  max-width: 65px;
}
/* end More Options (advanced) section */



/* Popup dialog box */
#studentLoanContainer {
  position: relative;
  display: inline-block;
  float: right;
  margin-left: 2px;
}
.popupButton {
  padding: 0;
  display: inline-block;
  border-radius: 50%;
  border: 1px solid #b2b2b2;
  height: 15px;
  width: 15px;
  float: right;
  text-align: center;
  font-size: 12px;
  font-weight: bold;
  background-color: #eeeeee;
  cursor: pointer;
}
.popupButton:hover {
  background-color: #dedede;
}
.popup {
  visibility: hidden;
  width: 320px;
  white-space: nowrap;
  text-align: center;
  position: absolute;
  z-index: 1;
  bottom: 150%;
  left: 50%;
  margin-left: -112px;
  padding: 0 5px;
  border-radius: 8px;
  background-color: #4a5154;
  color: #fff;
  padding: 3px 5px;
  cursor: pointer;
}
.popup::after {
  content: "";
  position: absolute;
  top: 100%;
  left: 35%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: #555 transparent transparent transparent;
}
.visible {
  visibility: visible;
}
/* end Popup dialog box */



/* Yearly/Monthly/Weekly output box */

[type="radio"].radiobox-button {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px; margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}
label.radiobox-label {
  /* display: block; leaves a small gap to the right - doesn't seem to like 33.33% width, but flex seems to handle it fine*/
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 100%;
  font-weight: bold;
  background: white;
  float: left;
  width: 33.333333333333333%;
  padding: 10px 0 10px 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

label.radiobox-label:nth-of-type(2) {
  border-left: 1px solid #b2b2b2; /* on white: rbga(0,0,0,0.3), rgb(178,178,178) */
  border-right: 1px solid #b2b2b2;
}

:checked+label.radiobox-label {
  border-top: 3px solid #99baef;
  margin-top: -1px;
  padding-top: 8px;
  padding-bottom: 11px;
  border-bottom: none;
}

:not(:checked)+label.radiobox-label {
  background-color: #eeeeee;
  border-bottom: 1px solid #b2b2b2;
}

:not(:checked)+label.radiobox-label:hover {
  background-color: #dedede;
}

:checked+label.radiobox-label:hover {
  background-color: #f8f8f8;
}

[type="radio"]:focus:checked+label.radiobox-label {
  background-color: #f8f8f8;
}

[type="radio"]:focus:not(:checked)+label.radiobox-label {
  background-color: #dedede;
}

.top-wrapper {
  -webkit-box-shadow: 2px 2px 5px #dddddd;
  box-shadow: 2px 2px 5px #dddddd;
  border-top: 1px solid rgba(0,0,0,0.3);
  border-left: 1px solid rgba(0,0,0,0.3);
  border-right: 1px solid rgba(0,0,0,0.3);
  z-index: 2;
}

.bottom-wrapper {
  margin-top: -2px;
  padding-top: 72px;
  padding-bottom: 73px;
  height: 100%;
  text-align: center;
  background-color: #ffffff;
  -webkit-box-shadow: 2px 2px 5px #dddddd;
  box-shadow: 2px 2px 5px #dddddd;
  border: 1px solid rgba(0,0,0,0.3);
  z-index: 3;
}

.radiobox-content {
  font-size: 15px;
}

.radiobox {
  width: 281px;
  margin: 30px 40px;
  float: left;
}
/* end Yearly/Monthly/Weekly output box */



.afterword {
  margin: 0 40px 20px 40px;
}

.afterword p {
  margin-bottom: 5px;
}

#pieChart {
  display: inline-block;
  margin: 0 auto;
  margin: 30px 0 30px 0;
  height: 200px;
  width: 400px;
  padding-left: 10px;
  border: 1px solid #b2b2b2;
  -webkit-box-shadow: 2px 2px 5px #dddddd;
  box-shadow: 2px 2px 5px #dddddd;
}

footer a {
  color: black;
}



@media screen and (max-width: 820px) {
  .mainContent {
    width: 100%;
    margin: 0 auto;
  }
  .mainHeaderText {
    width: 100%;
  }
  .introduction {
    width: 90vw;
    margin: 20px auto;
  }
  .advanced-section {
    width: 95vw;
  }
  .radiobox {
    margin: 0 auto;
    margin-top: 30px;
    float: none;
    min-width: 281px;
    width: 95vw;
  }
  .bottom-wrapper {
    padding: 30px 0;
  }
  .inputs-section {
    margin: 0 auto;
    width: 95vw;
    display: block;
  }
  .basic-input {
    display: block;
    text-align: center;
    position: relative;
    }
  .basic-input:nth-of-type(2) {
    margin-top:10px;
    height:19px;
  }
  #scottishTax {
    position: absolute;
    top: 3px;
    margin-top: 0;
  }
  footer {
    width: 100%;
  }
  div.footer-flex-container {
    width: 100%;
  }
  #pieChart {
    width: 95vw;
    margin: 0 auto;
    margin-top: 30px;
    display: block;
  }
  .advanced-header.active + .advanced-content {
    padding: 10px 5px 0px 5px;
    height: 107px;
  }
  .advanced-content input[type=checkbox] {
  float:right;
  margin: 8px auto 8px 3px;
  height: 14px;
  width: 14px;
  }
  .advanced-input span.currency {
    float: left;
    margin: 2px auto 2px auto;
  }
  .advanced-content .max-width {
    max-width: 150px;
  }
  .advanced-input * {
    display: block;
  }
  #studentLoanContainer {
    margin-right: 5px;
  }
  .popup {
    white-space: normal;
    width: 180px;
    margin-left: -90px;
  }
  .popup::after {
    left: 50%;
  }
  .afterword {
    width: 90vw;
    margin: 20px auto;
  }
}

